<resources>
    <string name="app_name">Store DZ</string>
    <string name="app_slogan">Dz Store \n  Search | Discover</string>
    <string name="already_have_an_account_login">Already have an Account ? login</string>
    <string name="join_now">Join Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I\'m an Admin ?</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="login_admin">Login Admin</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="description_product">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="price_text">Price :</string>
    <string name="dollar">$</string>
    <string name="close_settings">Close</string>
    <string name="update_settings">Update</string>
    <string name="update_image">Update Image</string>
    <string name="update_your_name">Update your name</string>
    <string name="update_your_phone_number">Update your phone number</string>
    <string name="update_your_address">Update your address</string>
    <string name="update_your_password">Update your password</string>
    <string name="next">Next</string>
    <string name="prodect_quantity">Prodect quantity</string>
    <string name="price_product">Price Product</string>
    <string name="please_confirm_your_shipment_details">Please confirm your Shipment Details</string>
    <string name="your_name">Your name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_home_address">Your home address</string>
    <string name="your_city_name">Your City Name</string>
    <string name="confirm">Confirm</string>
    <string name="check_new_order">Check new order</string>
    <string name="new_order">New Order</string>
    <string name="address">Address</string>
    <string name="date_time">Date Time</string>
    <string name="show_all_products">Show All Products</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="set_question">Set security question</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_write_your_phone_number">Please write your phone number</string>
    <string name="answer_the_following_security_question">Answer the following security question ?</string>
    <string name="what_is_your_favorite_series">What is your favorite series ?</string>
    <string name="what_is_your_favorite_super_hero">What is your favorite super hero ?</string>
    <string name="verify">Verify</string>
    <string name="text_answer">Please set answers for the following security question</string>
    <string name="set">SET</string>
    <string name="first_name_and_last_name">First Name and Last Name</string>
    <string name="email">Email</string>
    <string name="shop_business_address">Shop Business Address</string>
    <string name="register">REGISTER</string>
    <string name="seller_form_register">Seller Form Register</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="wants_to_become_a_seller">Wants to become a seller ?</string>
    <string name="title_activity_home_seller">HomeSellerActivity</string>
    <string name="title_home">Home</string>
    <string name="check_and_approve_new_product">Check And Approve New Product</string>
    <string name="approve_new_products">Approve New Products</string>
    <string name="my_all_products">My All Products</string>
    <string name="state_approved">State Approved</string>
    <string name="oops_nothing">Oops , Nothing...</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="answer_question">Answer Question</string>
</resources>
