<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b8eeeeee"
    tools:context=".Seller.SellerRegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_seller_login"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <TextView
        android:id="@+id/registration_seller_form_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_seller_login"
        android:layout_marginTop="8dp"
        android:text="@string/seller_form_register"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_seller_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_seller_form_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/first_name_and_last_name" />

    <EditText
        android:id="@+id/phone_seller_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_seller_register"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/email_seller_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_seller_register"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password_seller_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_seller_register"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/shop_bussines_address_seller_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_seller_register"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/shop_business_address" />

    <Button
        android:id="@+id/register_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop_bussines_address_seller_register"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:text="@string/register"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/link_login_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_seller"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginBottom="8dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/white" />
</RelativeLayout>
</ScrollView>