<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative_top_reset_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/page_title_reset_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="12.5dp"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_top_reset_password"
        android:layout_margin="16dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/please_write_your_phone_number"
        android:padding="20dp" />

    <TextView
        android:id="@+id/text_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_phone_number"
        android:text="@string/answer_the_following_security_question"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_answer"
        android:layout_margin="8dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/what_is_your_favorite_series"
        android:padding="20dp" />

    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_1"
        android:layout_margin="8dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/what_is_your_favorite_super_hero"
        android:padding="20dp" />


    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_2"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>