<?xml version="1.0" encoding="utf-8"?>
<com.rey.material.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/confirm_your_shipment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/please_confirm_your_shipment_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/shippment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@id/confirm_your_shipment_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_name" />

    <EditText
        android:id="@+id/shippment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@id/shippment_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_phone_number"
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/shippment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@id/shippment_phone_number"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_home_address" />

    <EditText
        android:id="@+id/shippment_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shippment_address"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_city_name" />

    <Button
        android:id="@+id/confirm_shippment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20sp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        android:textColor="@android:color/black" />


</com.rey.material.widget.RelativeLayout>