<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/user_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/order_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_phone_number"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/product_price"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_product_price"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_address"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/date_time"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/show_all_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date_time"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:text="@string/show_all_products"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>