<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.SetQuestionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/answer_question"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/answer_the_following_security_question"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_text_answer1_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_settings"
            android:layout_margin="16dp"
            android:hint="@string/what_is_your_favorite_series" />

        <EditText
            android:id="@+id/edit_text_answer2_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_answer1_setting"
            android:layout_margin="16dp"
            android:hint="@string/what_is_your_favorite_super_hero" />

        <Button
            android:id="@+id/set_settings_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_answer2_setting"
            android:layout_margin="16dp"
            android:background="@drawable/custom_drawable_button"
            android:text="@string/set"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>