<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminHomeActivity">

    <Button
        android:id="@+id/main_tain_btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_3"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/maintain_products"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_new_order_activity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_tain_btn_admin"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/check_new_order"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_new_approve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_order_activity_btn"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/check_and_approve_new_product"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/log_out_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_new_approve"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/log_out"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>