<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyers.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_settings"
        style="@style/Theme.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="@string/close_settings"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/update_settings"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_settings_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/update_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_settings_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/update_image"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_profile_settings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_image"
                android:layout_margin="5dp"
                android:hint="@string/update_your_name"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/phone_profile_settings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_profile_settings_edit"
                android:layout_margin="5dp"
                android:hint="@string/update_your_phone_number"
                android:inputType="phone"
                android:padding="15dp" />

            <EditText
                android:id="@+id/address_profile_settings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_profile_settings_edit"
                android:layout_margin="5dp"
                android:hint="@string/update_your_address"
                android:padding="15dp" />

            <EditText
                android:id="@+id/password_profile_settings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_profile_settings_edit"
                android:layout_margin="5dp"
                android:hint="@string/update_your_password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/security_question_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_profile_settings_edit"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDark"
                android:padding="20dp"
                android:text="@string/set_question"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>