<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b8eeeeee"
    tools:context=".Seller.SellerRegistrationActivity">


    <ImageView
        android:id="@+id/img_seller_login"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <TextView
        android:id="@+id/login_seller_form_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_seller_login"
        android:text="@string/seller_login_form"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_seller_login"
        android:gravity="center">


        <EditText
            android:id="@+id/email_seller_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:padding="10dp"
            app:et_labelTextSize="25sp" />

        <EditText
            android:id="@+id/password_seller_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_seller_login"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:padding="10dp"
            app:et_labelTextSize="25sp" />


        <Button
            android:id="@+id/login_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_seller_login"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/black" />
    </RelativeLayout>
</RelativeLayout>