<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller.SellerAddNewProductActivity">

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/select_product_image"
        android:contentDescription="@null" />

    <EditText
        android:id="@+id/name_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_product_image"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <EditText
        android:id="@+id/description_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_product"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/description_product"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <EditText
        android:id="@+id/price_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_product"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_drawable_input"
        android:hint="@string/product_price"
        android:inputType="number"
        android:padding="20dp" />

    <Button
        android:id="@+id/add_new_product_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_product"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_drawable_button"
        android:padding="17dp"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>